# baby-lights

./: .gitignore  LICENSE  README.md  buildozer.spec  kivy-reloader.toml  main.py  pyproject.toml
.github/workflows/: android-apk.yml
baby_lights/: __init__.py  android_utils.py  app.py  navigator.py
baby_lights/popups/: __init__.py  popup.kv  popup.py
baby_lights/screens/: main_screen.kv  main_screen.py  shader_screen.kv  shader_screen.py
baby_lights/uix/: baby_button.kv  baby_button.py  shader.py
tests/: test_navigator.py  test_popups.py
