[project]
name = "baby-lights"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["kivy-reloader>=0.6.4"]

[tool.ruff]
line-length = 88
extend-exclude = ['.venv']

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']

[tool.ruff.format]
preview = true
quote-style = 'single'

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
# Disable missing type annotation warnings
disallow_untyped_defs = false
disallow_incomplete_defs = false
disallow_untyped_calls = false
warn_return_any = false

[dependency-groups]
dev = [
    "mypy>=1.17.1",
]
